fix positioning of article title on mobile

--- a/style.css
+++ b/style.css
@@ -811,12 +811,13 @@ a:hover, a:active {
 	.article-begin h1.entry-title {
 		margin-left: 15px;
 		font-size: 60px;
-		font-weight: 200;
 		color: #fff;
 		line-height: 70px;
 		top: 0px;
 		position: absolute;
 		margin-top: 0;
+		color: #fff;
+		text-decoration: none;
 	}
 
 }
@@ -826,12 +827,12 @@ a:hover, a:active {
 		h1.entry-title {
 			margin-left: 20px;
 			font-size: 40px;
-			font-weight: 200;
 			position: absolute;
-			top: 2em;
+			top: 0;
 			color: #fff;
 			max-width: 90%;
 			line-height: 45px;
+			text-decoration: none;
 		}
 
 		.entry-meta {
